--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
-  },
+  "start": "node ./bin/www",
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "build": "echo \"Building the app...\""
+},
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
