--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Set Permissions for Jest
+        run: chmod +x ./node_modules/.bin/jest
+
       - name: Run Tests
         run: npm test
 
